--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.12.4",
+    "@blocknote/react": "^0.12.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -22,6 +26,7 @@
     "github-markdown-css": "^5.5.1",
     "highlight.js": "^11.9.0",
     "next": "14.1.4",
+    "next-auth": "5.0.0-beta.17",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
