--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@blocknote/core": "^0.12.4",
     "@blocknote/react": "^0.12.4",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,7 +28,7 @@
     "clsx": "^2.1.0",
     "github-markdown-css": "^5.5.1",
     "highlight.js": "^11.9.0",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "next-auth": "5.0.0-beta.17",
     "next-themes": "^0.3.0",
     "react": "^18",
