--- a/package.json
+++ b/package.json
@@ -12,33 +12,46 @@
     "@auth/prisma-adapter": "^2.0.0",
     "@blocknote/core": "^0.12.4",
     "@blocknote/react": "^0.12.4",
+    "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-table": "^8.16.0",
     "@upstash/redis": "^1.29.0",
     "ahooks": "^3.7.11",
     "class-variance-authority": "^0.7.0",
     "clipboard": "^2.0.11",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "github-markdown-css": "^5.5.1",
     "highlight.js": "^11.9.0",
     "next": "^14.2.3",
     "next-auth": "5.0.0-beta.17",
     "next-themes": "^0.3.0",
+    "qs": "^6.12.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "recharts": "^2.12.6",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
