--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-loading": "^2.0.3",
     "recharts": "^2.12.6",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
